# rules_go_proto_examples

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
cmd/myserviced/: BUILD.bazel  main.go  myservice.go
cmd/myserviced/insecure/: BUILD.bazel  insecure.go
myteam/myservice/: BUILD.bazel  myservice.proto
shared/: BUILD.bazel  shared.proto
uuid/: BUILD.bazel  uuid.go
