load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "myservice.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/myserviced/insecure:go_default_library",
        "//myteam/myservice:go_default_library",
        "@com_github_elazarl_go_bindata_assetfs//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "myserviced",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
