load("@com_github_tnarg_rules_gogo_proto//go_proto:rules.bzl", "gogo_proto_library")

gogo_proto_library(
    name = "go_default_library",
    mode = "faster",
    importpath = "example.com/api",
    package = "api",
    srcs = ["myservice.proto"],
    deps = [
         "//shared:go_default_library",
         "@com_github_tnarg_rules_gogo_proto//google/api:go_default_library",      # annotations
    ],
    with_grpc = True,
    with_validators = True,
    with_gateway = True,
    with_swagger = True,
    visibility = ["//visibility:public"],
)
